--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Serverless blog content",
   "scripts": {
+    "docs": "md-magic --path 'README.md' --ignore 'node_modules'",
     "test": "node validate.js"
   },
   "repository": {
@@ -16,6 +17,6 @@
   "homepage": "https://serverless.com/blog",
   "devDependencies": {
     "gray-matter": "^2.1.0",
-    "markdown-magic": "0.1.8"
+    "markdown-magic": "^0.1.13"
   }
 }
