--- a/authors/MariuszNowak.json
+++ b/authors/MariuszNowak.json
@@ -2,7 +2,7 @@
     "name": "Mariusz Nowak",
     "github": "medikoo",
     "twitter": "medikoo",
-    "avatar": "https://serverless.com/static/mariusz.f537e273.png",
+    "avatar": "https://s3-us-west-2.amazonaws.com/assets.blog.serverless.com/authors/mariusz_nowak.jpg",
     "bio": {
       "short": "Mariusz Nowak is a core developer at Serverless, Inc.",
       "long": "Mariusz is a core developer of Serverless Framework, active member of an open source community, engaged into design and implementation of a JavaScript/Node.js applications. Developed and published JavaScript tools and modules, which play important part in modern web applications."
